# serean

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
audio/source/: oscillator.cc  oscillator.h  synth_sound.cc  synth_sound.h
base/containers/: queue.h  queue_unittest.cc
base/system/: byte_order.h
media/base/: bit_reader.cc  bit_reader.h  bit_reader_core.cc  bit_reader_core.h  bit_reader_unittest.cc  container_names.cc  container_names.h
projects/adb/deal_hunter/: deal_hunter.py
resources/: s16le_mono_16k.pcm
scripts/: git_sync_deps.py
tutorials/: audio_property.cc  mac_audio.cc  mac_audio_unit.cc  memory_allocate.cc  memory_relate.cc  opencv_core_func.cc  ppm_image.cc  sdl_feature.cc  sdl_get_start.cc  smart_pointer.cc
tutorials/algorithms/: README.md
tutorials/audio/: CMakeLists.txt
tutorials/audio/examples/: wav_format.cc
tutorials/ccpp/: CMakeLists.txt
tutorials/ccpp/examples/: pointer2pointer.cc
tutorials/ffmpeg/: CMakeLists.txt  conanfile.txt
tutorials/ffmpeg/examples/: demux.cc  demux_decode.cc  demux_decode_audio.cc  demux_decode_video.cc  media_bitmap.cc  metadata.cc  openjpeg_decode.cc
tutorials/juce/: CMakeLists.txt
tutorials/juce/examples/: advanced_audio_sample.cc  audio_device_manager.cc  audio_input.cc  audio_player.cc  audio_sample_buffer.cc  decibel_level.cc  midi_data.cc  midi_synthesiser.cc  mpe_zone.cc  noise_generator.cc  waveform.cc
tutorials/matplotlib/: animation_sine.py  bezier.py  first_plot.py  plot_wave.py
tutorials/python/: README.md  aliens.py  control.py  fibo.py  read_heart.py
tutorials/sdl/: CMakeLists.txt  conanfile.txt
tutorials/sdl/examples/: color_keying.cc  get_start.cc  sdl_feature.cc  texture.cc
tutorials/tensorflow/: mnist_database.py  quick_start.py
